--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,15 @@
     "48": "icons/48.png"
   },
 
+  "browser_action": {
+    "browser_style": true,
+    "default_popup": "popup/switch.html",
+    "default_icon": {
+      "16": "icons/16.png",
+      "32": "icons/32.png"
+    }
+  },
+
   "content_scripts": [
     {
       "matches": ["https://twitter.com/home"],
