--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,4 @@
 {
-
   "manifest_version": 2,
   "name": "Twitter No Text",
   "version": "1.0",
@@ -12,17 +11,15 @@
 
   "browser_action": {
     "browser_style": true,
-    "default_popup": "popup/switch.html",
+    "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "icons/16.png",
-      "32": "icons/32.png"
+      "16": "icons/16.png"
     }
   },
 
   "content_scripts": [
     {
-      "matches": ["https://twitter.com/home"],
-      "js": ["notext.js"],
+      "matches": ["*://*.twitter.com/*"],
       "css": ["notext.css"]
     }
   ]
