--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
   "manifest_version": 2,
   "name": "Twitter No Text",
-  "version": "1.0",
+  "version": "1.1",
 
   "description": "Removes all tweet's texts from your twitter home",
 
   "icons": {
+    "32": "icons/32.png",
     "48": "icons/48.png"
   },
 
@@ -13,7 +14,8 @@
     "browser_style": true,
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "icons/16.png"
+      "16": "icons/16.png",
+      "32": "icons/32.png"
     }
   },
 
