--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,8 @@
     "browser_style": true,
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "icons/16.png",
-      "32": "icons/32.png"
+      "16": "icons/16-mono.png",
+      "32": "icons/32-mono.png"
     }
   },
 
