--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,10 @@
     "48": "icons/48.png"
   },
 
+  "permissions": [
+    "activeTab"
+  ],
+
   "browser_action": {
     "browser_style": true,
     "default_popup": "popup/popup.html",
@@ -21,8 +25,7 @@
 
   "content_scripts": [
     {
-      "matches": ["*://*.twitter.com/*"],
-      "css": ["notext.css"]
+      "matches": ["*://*.twitter.com/*"]
     }
   ]
 }
