--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Twitter No Text",
-  "version": "1.3",
+  "version": "1.4",
 
   "description": "Removes all tweet's texts from your twitter",
 
@@ -21,7 +21,7 @@
 
   "content_scripts": [
     {
-      "matches": ["*://*.twitter.com/*"],
+      "matches": ["*://*.twitter.com/*", "*://*.x.com/*"],
       "css": ["notext.css"]
     }
   ]
