--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Twitter No Text",
   "version": "1.4",
 
@@ -10,8 +10,7 @@
     "48": "icons/48.png"
   },
 
-  "browser_action": {
-    "browser_style": true,
+  "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "icons/16-mono.png",
